<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_main"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@color/light_gray"
    android:orientation="vertical">


    <ImageView
        android:layout_width="@dimen/iv_category_list_width"
        android:layout_height="@dimen/dimen_180dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_dummy"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16dp"
        android:paddingHorizontal="@dimen/margin_16dp"
        android:text="@string/card1"
        android:textSize="@dimen/text_size_14sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/margin_16dp"
        android:text="@string/card2"
        android:textSize="@dimen/text_size_14sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/margin_16dp"
        android:text="@string/card3"
        android:textSize="@dimen/text_size_14sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_16dp"
        android:paddingHorizontal="@dimen/margin_16dp"
        android:text="@string/click_me"
        android:textSize="@dimen/text_size_14sp" />
</LinearLayout>