<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/margin_16dp"
        tools:context=".ui.activity.HomeActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_city_say_delhi"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_25dp"
            android:text="@string/hello_mike_rodger"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_24sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_category_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_25dp"
            android:text="@string/trending_products"
            android:textSize="@dimen/text_size_16sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_trending"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_trending_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_10dp"
            android:text="@string/view_more"
            android:textColor="@color/blue"
            android:textSize="@dimen/text_size_14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_25dp"
            android:text="@string/choose_from_band"
            android:textSize="@dimen/text_size_16sp"
            android:textStyle="bold" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/vp_choose_band"
            android:layout_width="match_parent"
            android:layout_height="@dimen/vp_height_200dp"
            android:layout_marginTop="@dimen/margin_10dp"
            android:clipChildren="false"
            android:clipToPadding="false" />

    </LinearLayout>
</ScrollView>